@@ -13,6 +13,12 @@ RSSKitTests_LDFLAGS = -lUnitKit -lRSSKit
 
 RSSKitTests_RESOURCE_FILES = \
 Resources/tests/wellformed/rdf/rdf_channel_description.xml \
+Resources/tests/wellformed/rdf/rdf_channel_title.xml \
+Resources/tests/wellformed/rdf/rdf_channel_link.xml \
+Resources/tests/wellformed/rdf/rdf_item_description.xml \
+Resources/tests/wellformed/rdf/rdf_item_link.xml \
+Resources/tests/wellformed/rdf/rdf_item_rdf_about.xml \
+Resources/tests/wellformed/rdf/rdf_item_title.xml \
 
 
 include $(GNUSTEP_MAKEFILES)/bundle.make
