@@ -3,47 +3,86 @@
 
 #import "RDFTests.h"
 
-#define PATH @"tests/wellformed/rdf/"
+#define FETCH(x) \
+  RSSFeed* feed = \
+    [RSSFeed feedWithResource: (x)]; \
+  \
+  [feed fetch]; \
 
+
+
+/**
+ * Runs simple tests for RDF (RSS 1.0) files.
+ */
 @implementation RDFTests
 
 -(void)testChannelDesc
 {
-  RSSFeed* feed =
-    [RSSFeed feedWithResource: PATH @"rdf_channel_description.xml"];
+  FETCH(@"rdf_channel_description");
   
-  [feed fetch];
-  
-  if ([[feed description] isEqualToString: @"Example description"]) {
-    UKPass();
-  } else {
-    UKFail();
-  }
+  // FIXME: [feed description] is not a way to get the *description* but
+  // to get the *title* of the feed!
+  UKStringsEqual([feed description], @"Example description");
 }
 
 -(void)testChannelLink
-  {
-  }
+{
+  FETCH(@"rdf_channel_link");
+  UKStringsEqual([[feed feedURL] description], @"Example feed");
+}
 
 -(void)testChannelTitle
-  {
-  }
+{
+  FETCH(@"rdf_channel_title");
+  UKStringsEqual([feed description], @"Example feed");
+}
 
 -(void)testItemDesc
   {
+    FETCH(@"rdf_item_description");
+    UKTrue([feed count] > 0);
+    
+    RSSArticle* art = [feed articleAtIndex: 0];
+    UKNotNil(art);
+    
+    UKStringsEqual([art description], @"Example description");
   }
 
 -(void)testItemLink
   {
+    FETCH(@"rdf_item_link");
+    UKTrue([feed count] > 0);
+    
+    RSSArticle* art = [feed articleAtIndex: 0];
+    UKNotNil(art);
+    
+    UKStringsEqual([art url], @"http://example.com/1");
   }
 
 -(void)testItemRDFAbout
   {
+    FETCH(@"rdf_item_rdf_about");
+    UKTrue([feed count] > 0);
+    
+    RSSArticle* art = [feed articleAtIndex: 0];
+    UKNotNil(art);
+    
+    // XXX: The semantics of rdf:about? Can we use this as URL?
+    UKStringsEqual([art url], @"http://example.org/1");
   }
 
 -(void)testItemTitle
   {
+    FETCH(@"rdf_item_title");
+    UKTrue([feed count] > 0);
+    
+    RSSArticle* art = [feed articleAtIndex: 0];
+    UKNotNil(art);
+    
+    UKStringsEqual([art headline], @"Example title");
   }
+
+/*
 
 -(void)testRSS090ChannelTitle
   {
@@ -60,6 +99,8 @@
 -(void)testRSSV10NotDefaultNS
   {
   }
+
+*/
 
 @end
 
